# openai-rs

./: .env  Cargo.toml  README.md
src/: lib.rs  memory.rs  openai.rs  prelude.rs  request.rs
src/api/: chat.rs  completions.rs  mod.rs  models.rs
