[package]
name = "openai-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
mime = "0.3.17"
reqwest = { version = "0.11.16", features = ["serde_json", "blocking", "json"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = { version = "1.0.95" }
easydev = { git = "https://github.com/dyanechi/easydev-rs" }
# ureq = { version = "2.6.2", features = ["serde", "serde_json", "json"] }

